packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
/* ... */
td.settingvalue.unused,
td.settingvalue.unused td {
  color: $font-color-dimmed;
}

.wato table.nform div.title a {
  color: $font-color;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

table.nform.rulesettings td.legend {
  width: 300px;

  div.title {
    max-width: 300px;
  }
}

/*--Profile Repl-----------------------------------------------------------.
|          ____             __ _ _        ____            _                |
|         |  _ \ _ __ ___  / _(_) | ___  |  _ \ ___ _ __ | |               |
|         | |_) | '__/ _ \| |_| | |/ _ \ | |_) / _ \ '_ \| |               |
|         |  __/| | | (_) |  _| | |  __/ |  _ <  __/ |_) | |               |
|         |_|   |_|  \___/|_| |_|_|\___| |_| \_\___| .__/|_|               |
|                                                  |_|                     |
'-------------------------------------------------------------------------*/

#profile_repl {
  .site {
    width: 158px;
    padding: 2px;
    margin: 0 5px 5px 0;
    text-overflow: ellipsis;
    background: $bg-color-secondary;
    border: 1px solid $color-table-border;
    border-radius: 6px;
    box-shadow: none;

    div,
    span {
      display: inline-block;
      vertical-align: middle;
    }
  }

  div {
    &.repl_status {
      background-size: contain;
    }

    &.repl_locked {
      background-image: url('../facelift/images/icon_repl_locked.png');
    }

    &.repl_pending {
      background-image: url('../facelift/images/icon_repl_pending.png');
    }

    &.repl_failed {
      background-image: url('../facelift/images/icon_repl_failed.png');
    }

    &.repl_25 {
      background-image: url('../facelift/images/icon_repl_25.png');
    }

    &.repl_50 {
      background-image: url('../facelift/images/icon_repl_50.png');
    }

    &.repl_75 {
      background-image: url('../facelift/images/icon_repl_75.png');
    }

    &.repl_success {
      background-image: url('../facelift/images/icon_success.png');
    }
  }
}

.wato table.data.check_catalog td {
  &.title {
    display: table-cell;
    width: 500px;
  }

  &.name {
    width: 200px;
  }

  &.agents {
    width: 200px;
  }
}

/*--Best practices---------------------------------------------------------.
 |   ____            _                          _   _                       |
 |  | __ )  ___  ___| |_   _ __  _ __ __ _  ___| |_(_) ___ ___  ___         |
 |  |  _ \ / _ \/ __| __| | '_ \| '__/ _` |/ __| __| |/ __/ _ \/ __|        |
 |  | |_) |  __/\__ \ |_  | |_) | | | (_| | (__| |_| | (_|  __/\__ \        |
 |  |____/ \___||___/\__| | .__/|_|  \__,_|\___|\__|_|\___\___||___/        |
 |                        |_|                                               |
 '-------------------------------------------------------------------------*/

.wato table.data.analyze_config {
  width: 100%;

  td.state div {
    position: relative;
    line-height: 20px;
  }

  th.header_state {
    width: 100px;
  }

  td.state a {
    position: absolute;
    right: 0;
    background: transparent;
  }

  tr.ac_test_details td a {
    text-decoration: underline;

    &:hover {
      text-decoration: none;
    }
  }
}

table.data.analyze_config td.buttons {
  min-width: 25px;
}

/* Left over wato styles from former _main.scss */
.wato .search {
  display: block;
}

.wato h3 {
  @include table-header-mixin;
}

div.wato div.matching_message,
div.wato div.info {
  padding-left: $spacing;
}

a.create_rule {
  @include button-mixin;
  display: inline-flex;
  align-items: center;
  padding: 0.5 * $spacing $spacing;
  cursor: pointer;
  border-radius: $theme-border-radius;

  img.icon {
    margin-right: 0.5 * $spacing;
  }
}

tr.condition div.label_groups,
form.biaggr div.label_groups,
form.birule div.label_groups {
  @include label-groups-mixin; // from _main.scss

  tr[id*='label_groups_entry'] > td.vlof_buttons a.delete_button img {
    width: 12px;
    height: 12px;
    opacity: 1;
    margin-right: $spacing;
  }

  div.label_group {
    flex-grow: unset;
  }
}

div.dcd_host_manager_state,
div.dcd_hosts_about_cycle {
  background-color: $bg-color !important;
  margin-top: 0;
  margin-bottom: 10px;
  padding-top: 0 !important;
  padding-left: 5px !important;

  div.section {
    height: 25px;
    display: flex;

    .title {
      font-weight: 600;
    }
  }
}

h3.table.dcd_about_cycle {
  margin-top: 20px;
}

table.dcd_host_processing {
  margin-bottom: 20px;
}

div.user_messages {
  div.container {
    div.text {
      margin: 0 10px 10px 10px;
    }

    div.footer {
      display: flex;
      justify-content: space-between;
      padding: 0 10px;

      div.details {
        display: flex;
        align-items: center;
      }
    }
  }
}

#form_edit_host table#monitoring_agents {
  div#attr_default_tag_agent,
  div#attr_entry_tag_agent {
    div.cmk-vue-app {
      display: contents;
    }
  }
}

